--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,103 +1,69 @@
-version: '3.3'
+version: "3.7"
+
 
 services:
-  # Web Application Service Definition
-  # --------
-  #
-  # All of the information needed to start up an odoo web
-  # application container.
-  web:
-    image: odoo:15.0
-    depends_on:
-        - db
 
-    restart: "no"
-
-    # Port Mapping
-    # --------
-    #
-    # Here we are mapping a port on the host machine (on the left)
-    # to a port inside of the container (on the right.) The default
-    # port on Odoo is 8069, so Odoo is running on that port inside
-    # of the container. But we are going to access it locally on
-    # our machine from localhost:9000.
-    # ports:
-      # - 8069:8069
-
-    # Data Volumes
-    # --------
-    #
-    # This defines files that we are mapping from the host machine
-    # into the container.
-    #
-    # Right now, we are using it to map a configuration file into
-    # the container and any extra odoo modules.
-    volumes:
-      - ./docker/config:/etc/odoo
-      - .:/workspace
-
-    # Odoo Environment Variables
-    # --------
-    #
-    # The odoo image uses a few different environment
-    # variables when running to connect to the postgres
-    # database.
-    #
-    # Make sure that they are the same as the database user
-    # defined in the db container environment variables.
-    environment:
-      - HOST=db
-      - USER=odoo
-      - PASSWORD=odoo
-
-  # Database Container Service Definition
-  # --------
-  #
-  # All of the information needed to start up a postgresql
-  # container.
   db:
-    image: postgres:14
-    restart: "no"
-
-    # Database Environment Variables
-    # --------
-    #
-    # The postgresql image uses a few different environment
-    # variables when running to create the database. Set the
-    # username and password of the database user here.
-    #
-    # Make sure that they are the same as the database user
-    # defined in the web container environment variables.
-    environment:
-      - POSTGRES_PASSWORD=odoo
-      - POSTGRES_USER=odoo
-      - POSTGRES_DB=postgres  # Leave this set to postgres
-
-  nginx:
-    image: nginx
-    restart: "no"
-    volumes:
-        - ./docker/nginx:/etc/nginx/conf.d
+    image: postgres:12
+    container_name: db
+    restart: unless-stopped
     ports:
-        - 80:80
-    environment:
-        - NGINX_PORT=80
-    depends_on:
-        - web
-        - pgadmin
-
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: "no"
-    depends_on:
-        - db
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@g.cn}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      - "127.0.0.1:5444:5432"
+    networks:
+      - net1
     volumes:
-      - pgadmin:/root/.pgadmin
-    # ports:
-    #   - "${PGADMIN_PORT:-5050}:80"
+      - db_home:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=odoo
+      - POSTGRES_PASSWORD=odoo
+      - POSTGRES_DB=v15_odoo
+
+  odoo:
+    container_name: odoo
+    image: odoogap:15.0
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    volumes:
+      - odoo_home:/var/lib/odoo
+      - ./addons:/mnt/extra-addons
+      - ~/git/oe/15.0/:/mnt/ee-addons
+    depends_on:
+      - db
+    ports:
+      - "127.0.0.1:8069:8069"
+      - "127.0.0.1:8072:8072"
+    networks:
+      - net1
+      
+  odoo_init:
+    container_name: odoo_init
+    image: odoogap:15.0
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    restart: 'no'
+    command: >
+      bash -c "if [ ! -d "/var/lib/odoo/started" ]; then touch /var/lib/odoo/started
+      && /entrypoint.sh odoo -d v15_odoo -i base --max-cron-threads 0 --no-http --stop-after-init -i base; fi"
+    volumes:
+      - odoo_home:/var/lib/odoo
+      - ./addons:/mnt/extra-addons
+      - ~/git/oe/15.0/:/mnt/ee-addons
+    depends_on:
+      - db
+    networks:
+      - net1
+
 
 volumes:
-    pgadmin:
+  db_home:
+    external: false
+  odoo_home:
+    external: false
+
+
+networks:
+  net1: 
+    name: net1
