--- a/odoo.conf
+++ b/odoo.conf
@@ -2,7 +2,7 @@
 addons_path = /mnt/ee-addons,/opt/odoo/15.0/addons,/mnt/extra-addons
 data_dir = /var/lib/odoo
 workers = 3
-# admin_passwd = admin
+admin_passwd = admin
 # csv_internal_sep = ,
 # db_host = False
 # db_maxconn = 64
